Fix to profile to fix overflowing text

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -12,6 +12,7 @@
 
 #profile_details{
   padding-left: 50px;
+  overflow: hidden;
 }
 
 #profile h1, #profile h2, #profile h3, #profile h4, #profile h5, #profile h6 {
